home sliders and scroll button

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,13 @@
 body{
   min-height: 2000px;
   font-family: 'Roboto', sans-serif;
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $main-color;
+    border-radius: 10px;
+  }
 }
 // ! custom container fluid style
 .container-fluid{
