updates profile and ceo for sportify

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 
 
 body{
-  min-height: 2000px;
+  // min-height: 2000px;
   font-family: 'Roboto', sans-serif;
   &::-webkit-scrollbar {
     width: 5px;
